environments/prd/balance-fit-prd/base/network.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2024-03-06T21:12:57Z"
    name: efit
    namespace: balance-fit-prd
    resourceVersion: "3352241783"
    uid: 417f8a46-11b3-41d3-8fb2-c783c5835e7c
  spec:
    clusterIP: 172.30.154.67
    clusterIPs:
    - 172.30.154.67
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: efit-service
      port: 9000
      protocol: TCP
      targetPort: 9000
    selector:
      app: efit
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2024-03-06T21:12:57Z"
    name: mysql-service
    namespace: balance-fit-prd
    resourceVersion: "3352241770"
    uid: 43be4307-0c83-4c13-abbe-345b041c2968
  spec:
    clusterIP: 172.30.215.250
    clusterIPs:
    - 172.30.215.250
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: mysql-app
      port: 3306
      protocol: TCP
      targetPort: 3306
    selector:
      app: mysql-app
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2024-03-06T21:21:13Z"
    name: nginx-service
    namespace: balance-fit-prd
    resourceVersion: "3352268567"
    uid: 9521a731-7785-4bba-93a9-a5974c3fcac3
  spec:
    clusterIP: 172.30.246.104
    clusterIPs:
    - 172.30.246.104
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: nginx-service
      port: 8030
      protocol: TCP
      targetPort: 8030
    selector:
      app: nginx
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"route.openshift.io/v1","kind":"Route","metadata":{"annotations":{},"name":"efit","namespace":"balance-fit-prd"},"spec":{"host":"efit-dev.apps.ocp4.kohlerco.com","port":{"targetPort":"nginx-service"},"to":{"kind":"Service","name":"nginx-service","weight":100},"wildcardPolicy":"None"},"status":null}
    creationTimestamp: "2024-03-05T21:38:19Z"
    name: efit
    namespace: balance-fit-prd
    resourceVersion: "3949303208"
    uid: 56792359-cbc0-408e-8a19-994c1289d6ee
  spec:
    host: efit-prd.apps.ocp4.kohlerco.com
    port:
      targetPort: nginx-service
    to:
      kind: Service
      name: nginx-service
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2024-07-14T13:33:29Z"
        status: "True"
        type: Admitted
      host: efit-prd.apps.ocp4.kohlerco.com
      routerCanonicalHostname: router-default.apps.ocp4.kohlerco.com
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
