environments/prd/balance-fit-prd/base/workloads.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "33"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"efit"},"name":"efit","namespace":"balance-fit-prd"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"efit"}},"template":{"metadata":{"labels":{"app":"efit"}},"spec":{"containers":[{"env":[{"name":"DB_HOST","valueFrom":{"configMapKeyRef":{"key":"DB_HOST","name":"mysql-app"}}},{"name":"DB_DATABASE","valueFrom":{"configMapKeyRef":{"key":"DB_DATABASE","name":"mysql-app"}}},{"name":"DB_USERNAME","v [...]
      migration.openshift.io/preQuiescePaused: "false"
      migration.openshift.io/preQuiesceReplicas: "1"
    creationTimestamp: "2024-03-05T21:55:42Z"
    generation: 67
    labels:
      app: efit
    name: efit
    namespace: balance-fit-prd
    resourceVersion: "5415253631"
    uid: 81caee45-b260-4559-9167-fc8fd7e3e2ad
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: efit
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: efit
      spec:
        containers:
        - image: marlonbarbosafocus/efit-2.0:1.0.28
          imagePullPolicy: IfNotPresent
          lifecycle:
            postStart:
              exec:
                command:
                - /bin/sh
                - -c
                - cp -rf /var/www/. /code
          name: efit
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /code
            name: code
          - mountPath: /data
            name: efit-vol01
          - mountPath: /var/www/phpenvs
            name: configmap-env-config
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: code
          persistentVolumeClaim:
            claimName: code
        - name: efit-vol01
          persistentVolumeClaim:
            claimName: efit-vol01
        - configMap:
            defaultMode: 511
            items:
            - key: env
              path: .env
            - key: envphp
              path: envs.php
            name: configmap-env
          name: configmap-env-config
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2024-12-12T17:42:47Z"
      lastUpdateTime: "2024-12-12T17:42:47Z"
      message: ReplicaSet "efit-7469cb76b9" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2025-08-14T14:08:06Z"
      lastUpdateTime: "2025-08-14T14:08:06Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 67
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      migration.openshift.io/preQuiescePaused: "false"
      migration.openshift.io/preQuiesceReplicas: "1"
    creationTimestamp: "2024-03-05T21:49:17Z"
    generation: 7
    labels:
      app: mysql-app
    name: mysql-app
    namespace: balance-fit-prd
    resourceVersion: "5415023409"
    uid: 4695d007-92a8-46fd-b543-d079364243e1
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: mysql-app
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: mysql-app
        name: mysql-app
      spec:
        containers:
        - env:
          - name: MYSQL_DATABASE
            value: efit
          - name: MYSQL_USER
            valueFrom:
              configMapKeyRef:
                key: DB_USERNAME
                name: mysql-app
          - name: MYSQL_PASSWORD
            valueFrom:
              configMapKeyRef:
                key: DB_PASSWORD
                name: mysql-app
          - name: MYSQL_ROOT_PASSWORD
            value: "123456"
          image: mysql:5.7
          imagePullPolicy: IfNotPresent
          name: mysql-app
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql-persistent-storage
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2024-03-05T21:49:17Z"
      lastUpdateTime: "2024-03-05T21:52:58Z"
      message: ReplicaSet "mysql-app-7959b8f47b" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2025-08-14T12:44:19Z"
      lastUpdateTime: "2025-08-14T12:44:19Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 7
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "4"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"nginx"},"name":"nginx","namespace":"balance-fit-prd"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"nginx"}},"template":{"metadata":{"labels":{"app":"nginx"}},"spec":{"containers":[{"image":"quay.apps.ocp.kohlerco.com/kohler-base-images/nginx-unprivileged:latest","imagePullSecrets":[{"name":"devops-automation"},{"name":"quay-nonprod-devops-automation"},{"name":"quay-nonprod-devops-automatio [...]
      migration.openshift.io/preQuiescePaused: "false"
      migration.openshift.io/preQuiesceReplicas: "1"
    creationTimestamp: "2024-03-05T21:37:18Z"
    generation: 14
    labels:
      app: nginx
    name: nginx
    namespace: balance-fit-prd
    resourceVersion: "5418944825"
    uid: e63f7aac-73c4-4dbc-ad9c-525540a98371
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: nginx
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: nginx
      spec:
        containers:
        - image: quay.apps.ocp.kohlerco.com/kohler-base-images/nginx-unprivileged:latest
          imagePullPolicy: Always
          name: nginx
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/nginx/conf.d
            name: config-nginx
          - mountPath: /code
            name: code
        dnsPolicy: ClusterFirst
        imagePullSecrets:
        - name: devops-automation
        - name: quay-nonprod-devops-automation
        - name: quay-nonprod-devops-automation
        - name: quay-nonprod-devops-automation
        - name: devops-automation
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            items:
            - key: config
              path: site.conf
            name: configmap-nginx
          name: config-nginx
        - name: code
          persistentVolumeClaim:
            claimName: code
  status:
    conditions:
    - lastTransitionTime: "2024-03-05T21:56:59Z"
      lastUpdateTime: "2024-03-05T22:00:13Z"
      message: ReplicaSet "nginx-66c9df876d" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2025-08-14T12:43:34Z"
      lastUpdateTime: "2025-08-14T12:43:34Z"
      message: Deployment does not have minimum availability.
      reason: MinimumReplicasUnavailable
      status: "False"
      type: Available
    observedGeneration: 14
    replicas: 1
    unavailableReplicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
